# Jetson-Orin-Nano-Autonomous-Car

./: README.md
assets/3d-models/: zedmini_camera.ipt
docs/: README.md
ros2_ws/src/cobraflex/: README.md  setup.py
ros2_ws/src/cobraflex/cobraflex/: cobraflex_cmdvel_driver.py  lidar_avoidance_pid_node.py
ros2_ws/src/cobraflex_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/cobraflex_bringup/config/: cobraflex_param.yaml
