<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobraflex_bringup</name>
  <version>0.1.0</version>

  <description>
    Bringup package for the CobraFlex platform. 
    Provides launch files and configuration to start core sensors 
    (LiDAR, camera, auxiliary nodes) in a unified startup procedure.
  </description>

  <maintainer email="sanchezmorenosamuel23@gmail.com">Samuel</maintainer>

  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>my_py_pkg</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
